...
  const { theme } = useTheme();
  const navigation = useNavigation();

  return (
    <Pressable
      onPress={() => navigation.dispatch(DrawerActions.openDrawer())}
      testID="button-open-drawer"
      accessibilityLabel="Open navigation menu"
      accessibilityRole="button"
      style={styles.button}
    >
      <Feather name="menu" size={24} color={theme.text} />
    </Pressable>
...
